# Compound-AI-Systems

./: .gitignore  README.md  accounts.db  main.py  pyproject.toml  requirements.txt  sequence_diagram.puml
docs/: tools.md
src/MCP/: README.md
src/MCP/01_mcp_fetch_server/: server.ipynb  server.py
src/MCP/02_account_server/: accounts.db  accounts.py  accounts_client.py  accounts_server.py  client.py
src/MCP/03_memory_search_server/: memory_server.py  search_server.py
src/MCP/basics_server/: client-sse.py  client-stdio.py  function-calling.py  server.py  utils.py
src/MCP/bmi_server/: client.py  server.py
src/MCP/openai-client/: client.py  server.py
src/MCP/servers/: server.py
src/RagFlow/docs/: llm-service.md  openai-client.md
src/RagFlow/server/src/: server.py
src/RagFlow/server/src/api/: predict.py
src/RagFlow/server/src/data/: embeddings.json  metadata.json  persist_data.py  (+1 more)
src/ReAct/: README.md  __test__.py  brain.py  common.py  main.py  reactexecutor.py  tools.py
src/Structured/: instructor.ipynb  openai.ipynb
src/ToolFlow/: agents.py  chaining.py  chaining_parse.py  common.py  main.py  orchestrator.py  prompts.py  result_handler.py  runner.py  tools.py  types.py  utils.py
src/ToolFlow/assets/: workflow.json  workflow.mermaid
src/shared/: logger_setup.py
src/utils/: utils.py
src/workflows/: chain.py  utils.py
src/workflows/basics/: api_tools.py  custom_tools.py  data.json  structured_output.py  tools.py
src/workflows/chaining/: chain.py  prompt_chaining.py  pydantic_chaining.py  simple_chaining.py
util/: logger_setup.py
(+8 files in other folders)
