[project]
name = "compound-ai-systems"
version = "0.1.0"
description = "Compound AI Systems Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel",
    "ipython",
    "openai-agents>=0.0.12",
    "pydantic",
    "python-dotenv",
    "requests",
    "setuptools>=78.1.0",
]

[build-system]
requires = ["setuptools>=78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}
