[project]
name = "compound-ai-systems"
version = "0.1.0"
description = "Compound AI Systems Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel",
    "ipython",
    "mcp[cli]>=1.6.0",
    "openai-agents>=0.0.12",
    "pydantic",
    "python-dotenv",
    "requests",
    "setuptools>=78.1.0",
]
